--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="deletePopup" class="popup">
+    <p>Do you want to delete this box?</p>
+    <button id="confirmDelete">Confirm</button>
+    <button id="cancelDelete">Cancel</button>
+  </div>
   <div id="container"></div>
   <svg id="lines" width="100%" height="100%" ></svg>
   <svg id="grid" width="100%" height="100%">
