--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="deletePopup" class="popup">
+  <!-- <div id="deletePopup" class="popup">
     <p>Do you want to delete this box?</p>
     <button id="confirmDelete">Confirm</button>
     <button id="cancelDelete">Cancel</button>
+  </div> -->
+  <div id="rootContainer">
+
+    <div id="hoverInfoContainer"></div>
+    <div id="container"></div>
+    <svg id="lines" width="100%" height="100%" ></svg>
+    <svg id="grid" width="100%" height="100%">
+        <!-- Grid of points will be created here -->
+      </svg>
+      <svg id="polygon" width="100%" height="100%" ></svg>
+      
   </div>
-  <div id="container"></div>
-  <svg id="lines" width="100%" height="100%" ></svg>
-  <svg id="grid" width="100%" height="100%">
-      <!-- Grid of points will be created here -->
-    </svg>
-    <svg id="polygon" width="100%" height="100%" ></svg>
-    
 
     <!-- <script type="module"  src="src/polygon.js"></script> -->
   <script type="module" src="src/code.js"></script>
