[Feature] Began implementing he summary table

--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
         <!-- Grid of points will be created here -->
       </svg>
       <svg id="polygon" width="100%" height="100%" ></svg>
+      <!-- Existing content -->
+
+<div class="summaryTable">
+  <table id="summaryTable">
+    <tr>
+      <th>Wall #</th>
+      <th>Wall Length</th> 
+      <th>Corner Type</th>
+    </tr>
+    <tr>
       
+      <td>1</td>
+      <td>17ft 21in</td>
+      <td>Inside</td>
+    </tr>
+    <tr>
+      <td>Row 2, Col 1, Outside</td>
+      <td>Row 2, Col 2, Outside</td>
+    </tr>
+  </table>  
+</div>
+
+
   </div>
 
     <!-- <script type="module"  src="src/polygon.js"></script> -->
