--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
       <svg id="polygon" width="100%" height="100%" ></svg>
       <!-- Existing content -->
 
-<div class="summaryTable">
-  <table id="summaryTable">
-    <tr>
+<div class="summaryBox">
+  <table class="summaryTable">
+    <thead>
       <th>Wall #</th>
       <th>Wall Length</th> 
       <th>Corner Type</th>
-    </tr>
-    <tr>
+    </thead>
+    <tbody id="summaryTable"></tbody>
+    <!-- <tr>
       
       <td>1</td>
       <td>17ft 21in</td>
@@ -42,7 +43,7 @@
     <tr>
       <td>Row 2, Col 1, Outside</td>
       <td>Row 2, Col 2, Outside</td>
-    </tr>
+    </tr> -->
   </table>  
 </div>
 
