--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
     <div id="hoverInfoContainer"></div>
     <div id="container"></div>
+    
+    <canvas id="myCanvas" width="100%" height="100%" class="angleCanvas"></canvas>
     <svg id="lines" width="100%" height="100%" ></svg>
     <svg id="grid" width="100%" height="100%">
-        <!-- Grid of points will be created here -->
-      </svg>
-      <svg id="polygon" width="100%" height="100%" ></svg>
+      <!-- Grid of points will be created here -->
+    </svg>
+    <svg id="polygon" width="100%" height="100%" ></svg>
+
       <!-- Existing content -->
 
 <div class="summaryBox">
