--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
   <!-- <div id="deletePopup" class="popup">
     <p>Do you want to delete this box?</p>
     <button id="confirmDelete">Confirm</button>
     <button id="cancelDelete">Cancel</button>
   </div> -->
   <div id="rootContainer">
-
-    <div id="hoverInfoContainer"></div>
     <div id="container"></div>
-    
     <canvas id="myCanvas" width="100%" height="100%" class="angleCanvas"></canvas>
     <svg id="lines" width="100%" height="100%" ></svg>
     <svg id="grid" width="100%" height="100%">
