--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Draggable Boxes with Lines</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="body">
-  <!-- <div id="deletePopup" class="popup">
-    <p>Do you want to delete this box?</p>
-    <button id="confirmDelete">Confirm</button>
-    <button id="cancelDelete">Cancel</button>
-  </div> -->
   <div id="rootContainer">
     <div id="container"></div>
     <canvas id="myCanvas" width="100%" height="100%" class="angleCanvas"></canvas>
-    <svg id="lines" width="100%" height="100%" ></svg>
+    <svg id="lines" width="100%" height="100%"></svg>
     <svg id="grid" width="100%" height="100%">
       <!-- Grid of points will be created here -->
     </svg>
-    <svg id="polygon" width="100%" height="100%" ></svg>
+    <svg id="polygon" width="100%" height="100%"></svg>
 
-      <!-- Existing content -->
+    <!-- Existing content -->
 
-<div class="summaryBox">
-  <table class="summaryTable">
-    <thead>
-      <th>Wall #</th>
-      <th>Wall Length</th> 
-      <th>Corner Type</th>
-    </thead>
-    <tbody id="summaryTable"></tbody>
-    <!-- <tr>
-      
-      <td>1</td>
-      <td>17ft 21in</td>
-      <td>Inside</td>
-    </tr>
-    <tr>
-      <td>Row 2, Col 1, Outside</td>
-      <td>Row 2, Col 2, Outside</td>
-    </tr> -->
-  </table>  
-</div>
+    <div class="summaryBox">
+      <table class="summaryTable">
+        <thead>
+          <th>Wall #</th>
+          <th>Wall Length</th>
+          <th>Corner Type</th>
+        </thead>
+        <tbody id="summaryTable"></tbody>
+      </table>
+      <div class="zoomSlider">
+        <input type="range" name="zoomSlider" id="zoomSlider" min="1" max="100" value="50" class="slider">
+      </div>
+    </div>
 
 
   </div>
 
-    <!-- <script type="module"  src="src/polygon.js"></script> -->
+  <!-- <script type="module"  src="src/polygon.js"></script> -->
   <script type="module" src="src/code.js"></script>
   <!-- <script type="module" src="./index.js"></script> -->
 </body>
+
 </html>
