--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <tbody id="summaryTable"></tbody>
       </table>
       <div class="zoomSlider">
-        <input type="range" name="zoomSlider" id="zoomSlider" min="1" max="100" value="50" class="slider">
+        <input type="range" name="zoomSlider" id="rangeSlider" min="1" max="100" value="50" class="slider">
+        <span class="zoomSliderValue" id="sliderValue">50%</span>
       </div>
     </div>
 
