--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         </thead>
         <tbody id="summaryTable"></tbody>
       </table>
-      <div class="zoomSlider">
-        <input type="range" name="zoomSlider" id="rangeSlider" min="1" max="100" value="50" class="slider">
-        <span class="zoomSliderValue" id="sliderValue">50%</span>
+      <div class="zoom-buttons">
+        <button id="zoomOut">-</button>
+        <div class="zoom-value" id="zoomValue"></div>
+        <button id="zoomIn">+</button>
       </div>
     </div>
 
