--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="body">
@@ -44,7 +43,7 @@
   </div>
 
   <!-- <script type="module"  src="src/polygon.js"></script> -->
-  <script type="module" src="src/code.js"></script>
+  <script type="module" src="/src/main.ts"></script>
   <!-- <script type="module" src="./index.js"></script> -->
 </body>
 
