[FEATURE] added save, cancel, reset buttons

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
       <svg id="polygon" width="100%" height="100%"></svg>
 
       <!-- Existing content -->
-
       <div class="summaryBox">
+        <div class="buttons">
+          <button id="save" class="button">Save</button>
+          <button id="cancel" class="button">Cancel</button>
+          <button id="reset" class="button">Reset</button>
+        </div>
         <table class="summaryTable">
           <thead>
             <th>Wall #</th>
