[FEATURE] added a config manager

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <table class="summaryTable">
           <thead>
-            <th>Wall #</th>
+            <th>Wall Id</th>
             <th>Wall Length</th>
             <th>Corner Type</th>
           </thead>
